SERVER-82446 Fix $densify scenario where documents are generated outside of range